@@ -38,43 +38,55 @@
 		</area>
 
 		<area x="9%" y="92%" width="14%" height="7%" layer="3">
-			<drawtext  condition="isset{recdate}" y="0" width="{areawidth}" valign="center" align="center" font="{light}" fontsize="40%" color="{clrLightGray}" text="{tr(recordedat)}: {recdate}"/>
-			<!--<drawtext  condition="isset{year}" y="0" width="{areawidth}" valign="center" align="center" font="{light}" fontsize="40%" color="{clrLightGray}" text="{year}"/>-->
+			<drawtext  y="0" width="{areawidth}" valign="center" align="center" font="{light}" fontsize="40%" color="{clrLightGray}" text="{tr(recordedat)}: {recdate}"/>
 		</area>
 	</rectitle>
 
 	<progressbar>
-		<area x="2%" y="87%" width="96%" height="3%" layer="3">
-			<!--<fill color="{clrRed}" />-->
-			<!--<drawrectangle x="0" y="0" width="{current}/{total}*{areawidth}" height="95%" color="{clrHigh}" />-->
-			<drawimage imagetype="skinpart" path="replayProgress" x="0" y="0" width="{current}/{total}*{areawidth}" height="{areaheight}*0.98"/>
+		<area condition="not{timeshift}" x="2%" y="87%" width="96%" height="3%" layer="3">
+			<drawimage x="0" y="0" width="{current}/{total}*{areawidth}" height="{areaheight}*0.98" imagetype="skinpart" path="replayProgress" />
+		</area>
+		<area condition="{timeshift}" x="2%" y="87%" width="96%" height="3%" layer="3">
+			<drawimage x="0" y="0" width="{total}/{timeshifttotal}*{areawidth}" height="{areaheight}*0.98" imagetype="skinpart" path="replayTimeshift" />
+			<drawimage x="0" y="0" width="{current}/{timeshifttotal}*{areawidth}" height="{areaheight}*0.98" imagetype="skinpart" path="replayProgress" />
 		</area>
 	</progressbar>
 
 	<cutmarks>
-		<area x="2%" y="87%" width="96%" height="3%" layer="4">
+		<area condition="not{timeshift}" x="2%" y="87%" width="96%" height="3%" layer="4">
 			<loop name="marks" x="0" y="0" orientation="absolute">
 				<!-- draw mark -->
 				<drawrectangle condition="not{marks[active]}" x="{marks[position]}/{marks[total]}*{areawidth}" y="0" width="1" height="100%" color="{clrBlack}" />
 				<!-- draw active mark -->
 				<drawrectangle condition="{marks[active]}" x="{marks[position]}/{marks[total]}*{areawidth}" y="0" width="2" height="100%" color="{clrGreen}" />
-				<!-- draw bar to next mark if mark is startmark-->                
+				<!-- draw bar to next mark if mark is startmark-->
 				<drawrectangle condition="{marks[startmark]}" x="{marks[position]}/{marks[total]}*{areawidth}" y="37%" width="{marks[endposition]}/{marks[total]}*{areawidth} - {marks[position]}/{marks[total]}*{areawidth}" height="30%" color="{clrBlack}" />
+			</loop>
+		</area>
+
+		<area condition="{timeshift}" x="2%" y="87%" width="96%" height="3%" layer="4">
+			<loop name="marks" x="0" y="0" orientation="absolute">
+				<!-- draw mark -->
+				<drawrectangle condition="not{marks[active]}" x="{marks[position]}/{marks[timeshifttotal]}*{areawidth}" y="0" width="1" height="100%" color="{clrBlack}" />
+				<!-- draw active mark -->
+				<drawrectangle condition="{marks[active]}" x="{marks[position]}/{marks[timeshifttotal]}*{areawidth}" y="0" width="2" height="100%" color="{clrGreen}" />
+				<!-- draw bar to next mark if mark is startmark-->
+				<drawrectangle condition="{marks[startmark]}" x="{marks[position]}/{marks[timeshifttotal]}*{areawidth}" y="37%" width="{marks[endposition]}/{marks[timeshifttotal]}*{areawidth} - {marks[position]}/{marks[timeshifttotal]}*{areawidth}" height="30%" color="{clrBlack}" />
 			</loop>
 		</area>
 	</cutmarks>
 	
-	<currenttime>
+		<currenttime>
 		<area x="3%" y="92%" width="6%" height="7%" layer="3">
 			<drawtext x="0" align="center" valign="center" font="{light}" fontsize="45%" color="{clrLightGray}" text="{reccurrent}" />
 		</area>
 	</currenttime>
 	
-	<datetime>
+		<datetime>
 		<!--<area x="9%" y="92%" width="14%" height="7%" layer="3">
 			<drawtext x="20%" y="0" width="{areawidth}" valign="center" align="center" font="{light}" fontsize="40%" color="{clrLightGray}" text="{tr(recordedat)}: {recdate}"/>
 		</area>-->
-		<area x="23%" y="92%" width="11%" height="7%" layer="3">
+				<area x="23%" y="92%" width="11%" height="7%" layer="3">
 			<drawtext x="0" y="0" width="{areawidth}" valign="center" align="center" font="{light}" fontsize="40%" color="{clrLightGray}" text="{dayleadingzero}.{month}.{year}   {time}"/>
 		</area>
 	</datetime>
@@ -106,16 +118,19 @@
 	
 	<endtime>
 		<area x="66%" y="92%" width="12%" height="7%" layer="3">
-			<drawtext condition="isset{recend}" align="center" valign="center" font="{light}" fontsize="40%" color="{clrLightGray}" text="{tr(replayends)}:" />
+			<drawtext align="center" valign="center" font="{light}" fontsize="40%" color="{clrLightGray}" text="{tr(replayends)}:" />
 		</area>
 		<area x="78%" y="92%" width="11%" height="7%" layer="3">
-			<drawtext condition="isset{recend}" align="center" valign="center" font="{light}" fontsize="40%" color="{clrLightGray}" text="{recend}" />
+			<drawtext align="center" valign="center" font="{light}" fontsize="40%" color="{clrLightGray}" text="{recend}" />
 		</area>
 	</endtime>
 
 	<totaltime>
 		<area x="91%" y="92%" width="6%" height="7%" layer="3">
 			<drawtext align="center" valign="center" font="{light}" fontsize="45%" color="{clrLightGray}" text="{rectotal}" />
+		</area>
+		<area condition="{timeshift}" x="85%" y="86%" width="12%" height="5%" layer="4">
+			<drawtext align="right" valign="center" font="{light}" fontsize="60%" color="{clrWhite}" text="total: {timeshifttotal}h" />
 		</area>
 	</totaltime>
 
